# api/openapi/order.yml
@@ -69,10 +69,18 @@ components:
   schemas:
     Order:
       type: object
+      required: 
+        - id
+        - customerID
+        - status
+        - items
+        - paymentLink
       properties:
         id:
           type: string
         customerID:
+          type: string
+        status :
           type: string
         items:
           type: array
@@ -83,6 +91,11 @@ components:
 
     Item:
       type: object
+      required: 
+        - id
+        - name
+        - quantity
+        - priceID
       properties:
         id:
           type: string
@@ -115,6 +128,9 @@ components:
 
     ItemWithQuantity:
       type: object
+      required:
+        - id
+        - quantity
       properties:
         id:
           type: string
