# internal/order/ports/openapi_types.gen.go
@@ -16,24 +16,25 @@ type Error struct {
 
 // Item defines model for Item.
 type Item struct {
-	Id       *string `json:"id,omitempty"`
-	Name     *string `json:"name,omitempty"`
-	PriceID  *string `json:"priceID,omitempty"`
-	Quantity *int32  `json:"quantity,omitempty"`
+	Id       string `json:"id"`
+	Name     string `json:"name"`
+	PriceID  string `json:"priceID"`
+	Quantity int32  `json:"quantity"`
 }
 
 // ItemWithQuantity defines model for ItemWithQuantity.
 type ItemWithQuantity struct {
-	Id       *string `json:"id,omitempty"`
-	Quantity *int32  `json:"quantity,omitempty"`
+	Id       string `json:"id"`
+	Quantity int32  `json:"quantity"`
 }
 
 // Order defines model for Order.
 type Order struct {
-	CustomerID  *string `json:"customerID,omitempty"`
-	Id          *string `json:"id,omitempty"`
-	Items       *[]Item `json:"items,omitempty"`
-	PaymentLink *string `json:"paymentLink,omitempty"`
+	CustomerID  string `json:"customerID"`
+	Id          string `json:"id"`
+	Items       []Item `json:"items"`
+	PaymentLink string `json:"paymentLink"`
+	Status      string `json:"status"`
 }
 
 // PostCustomerCustomerIDOrdersJSONRequestBody defines body for PostCustomerCustomerIDOrders for application/json ContentType.
